--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,5 +1,6 @@
 @import "./variables.css";
 @import "./utils.css";
+@import "./fonts.css";
 
 @tailwind base;
 @tailwind components;
@@ -7,7 +8,7 @@
 
 html,
 body {
-  font-family: "Open Sans", "Inter";
+  font-family: "Gilroy", "Woodford Bourne Pro";
   margin: 0;
   padding: 0;
   box-sizing: border-box;
