--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -24,3 +24,52 @@
   font-weight: 900;
   font-style: normal;
 }
+
+@font-face {
+  font-family: "Gilroy Bold";
+  src:
+    local("Gilroy Bold"),
+    local("Gilroy-Bold"),
+    url("/src/assets/fonts/Gilroy-Bold/Gilroy-Bold.woff2") format("woff2"),
+    url("/src/assets/fonts/Gilroy-Bold/Gilroy-Bold.woff") format("woff"),
+    url("/src/assets/fonts/Gilroy-Bold/Gilroy-Bold.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Cormorant SC";
+  src:
+    local("Cormorant SC Regular"),
+    local("Cormorant-SC-Regular"),
+    url("/src/assets/fonts/CormorantSC-Regular/CormorantSC-Regular.woff2")
+      format("woff2"),
+    url("/src/assets/fonts/CormorantSC-Regular/CormorantSC-Regular.woff")
+      format("woff"),
+    url("/src/assets/fonts/CormorantSC-Regular/CormorantSC-Regular.ttf")
+      format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "BigNoodleTitling";
+  src:
+    local("BigNoodleTitling"),
+    local("BigNoodleTitling"),
+    url("/src/assets/fonts/bignoodletitling/big_noodle_titling.ttf")
+      format("truetype");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Ethnocentric Rg";
+  src:
+    local("Ethnocentric Rg"),
+    local("Ethnocentric Rg"),
+    url("/src/assets/fonts/EthnocentricRg/ethnocentricrg.ttf")
+      format("truetype");
+  font-weight: 500;
+  font-style: normal;
+}
